--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1058.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.2.3",
     "react-hook-use-state": "^1.1.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
